<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ADTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="started">시작됨</string>
    <string name="latitude">위도:</string>
    <string name="longitude">경도:</string>
    <string name="altitude">고도:</string>
    <string name="savetime">저장시간:</string>
    <string name="start">시작</string>
    <string name="stop">중단</string>
    <string name="gps_enabled">GPS 동작됨</string>
    <string name="gps_disabled">GPS 멈춤</string>
    <string name="cell_text">이동 %1$s</string>
    <string name="title_activity_map">MapActivity</string>

</resources>
